finish refactoring words out of approaches; improve wording of some messages, also

--- a/src/sil/org/syllableparser/resources/SyllableParser_en.properties
+++ b/src/sil/org/syllableparser/resources/SyllableParser_en.properties
@@ -32,7 +32,7 @@ menu.helpintro=Introduction to syllabification
 
 # About dialog
 about.header=About Asheninka
-about.content=A linguistic program to explore syllabification\n\nVersion: {0}\n\n© 2015 SIL International\nThis software is licensed under the LGPL, version 2.1 or later\n(http://www.gnu.org/licenses/lgpl-2.1.html)
+about.content=A linguistic program to explore syllabification and\nprovide a principled approach to hyphenation.\n\nVersion: {0}\n\n© 2015 SIL International\nThis software is licensed under the LGPL, version 2.1 or later\n(http://www.gnu.org/licenses/lgpl-2.1.html)
 
 #File Open/Save As dialog
 file.filterdescription=Syllable Parser files
@@ -101,7 +101,7 @@ label.nopredicted=There are no predicted syllabifications.\nEither there are no 
 label.wordtofind=Word to find: 
 label.wordpredictedvscorrect=Predicted vs. Correct Syllabification
 # menu.syllabifywords goes at the end of the following message
-label.nopredictedvscorrect=There are no differences between predicted and correct syllabifications.\nEither there are no words,\nall words failed to syllabify,\nor you need to invoke  
+label.nopredictedvscorrect=There are no differences between predicted and correct syllabifications.\nEither all predicted syllabifications are correct,\nthere are no words,\nall words failed to syllabify,or\nyou need to invoke 
 
 # file loading/saving
 file.error=Error
