--- a/src/sil/org/syllableparser/resources/SyllableParser_es.properties
+++ b/src/sil/org/syllableparser/resources/SyllableParser_es.properties
@@ -32,7 +32,7 @@ menu.helpintro=Introducci\u00f3n a la silabificaci\u00f3n
 
 # About dialog
 about.header=A cerca Asheninka
-about.content=Un programa ling\u00fc\u00edstico para investigar sylabificaci\u00f3n\n\nVersi\u00f3n: {0}\n\n\n\u00a9 2015 SIL International\nEste software est\u00e1 licenciado bajo la LGPL , versi\u00f3n 2.1 o posterior\n(http://www.gnu.org/licenses/lgpl-2.1.html)
+about.content=Un programa ling\u00fc\u00edstico para investigar sylabificaci\u00f3n\ny proporcionar un enfoque basado en principios de insertar guiones en palabras.\nVersi\u00f3n: {0}\n\n\n\u00a9 2015 SIL International\nEste software est\u00e1 licenciado bajo la LGPL , versi\u00f3n 2.1 o posterior\n(http://www.gnu.org/licenses/lgpl-2.1.html)
 
 #File Open/Save As dialog
 file.filterdescription=Archivos de Syllable Parser
@@ -101,7 +101,7 @@ label.nopredicted=No hay silabificaci\u00f3nes predichos.\nO bien no hay palabra
 label.wordtofind=Palabra para buscar: 
 label.wordpredictedvscorrect=Predicci\u00f3n vs. silabeo correcta
 # menu.syllabifywords goes at the end of the following message
-label.nopredictedvscorrect=No hay diferencias entre silabificaci\u00f3nes predichos y corregir.\nO bien no hay palabras,\ntodas las palabras no lograron silabear,\no usted necesita para invocar 
+label.nopredictedvscorrect=No hay diferencias entre silabificaci\u00f3nes predichos y corregir.\nO bien todos silabificaci\u00f3nes predichos son correctos,\nno hay palabras,\ntodas las palabras no lograron silabear, o\nusted necesita para invocar 
 
 # file loading/saving
 file.error=Error
