--- a/src/sil/org/syllableparser/resources/SyllableParser_es.properties
+++ b/src/sil/org/syllableparser/resources/SyllableParser_es.properties
@@ -35,8 +35,13 @@ menu.helpintro=Introducci\u00f3n a la silabificaci\u00f3n
 about.header=A cerca Asheninka
 about.content=Un programa ling\u00fc\u00edstico para investigar sylabificaci\u00f3n\ny proporcionar un enfoque basado en principios de insertar guiones en palabras.\nVersi\u00f3n: {0}\n\n\n\u00a9 2015 SIL International\nEste software est\u00e1 licenciado bajo la LGPL , versi\u00f3n 2.1 o posterior\n(http://www.gnu.org/licenses/lgpl-2.1.html)
 
-#File Open/Save As dialog
-file.filterdescription=Archivos de Syllable Parser
+#File Open/Save As dialog; import/export
+file.filterdescription=Archivos del programa Asheninka
+file.plainlistimportfilterdescription=Archivos simples
+file.paratexthyphenatedwordsfilterdescription=hyphenatedWords.txt archivo del programa ParaTExt
+file.paratextexportedwordlistfilterdescription=Archivos de lista de palabras exportados del programa ParaTExt
+file.exportedhyphenationlistfilterdescription=Archivos de separaci\u00f3n sil\u00e1bica
+file.xlingpaperhyphenationexceptionfilterdescription=Archivos de excepciones de separaci\u00f3n sil\u00e1bica para el programa XLingPaper 
 
 #Choose Interface Language dialog
 dialog.chooseinterfacelanguage=Selecionar el lengua del interfaz
