first pass at getting importing plain text word list to show progress bar and change mouse cursor

--- a/src/sil/org/syllableparser/resources/SyllableParser_es.properties
+++ b/src/sil/org/syllableparser/resources/SyllableParser_es.properties
@@ -94,6 +94,8 @@ label.words=Palabras
 label.predictedsyllabification=Silabificaci\u00f3n Predicada
 label.correctsyllabification=Silabificaci\u00f3n Correcta
 label.discussion=Discussi\u00f3n
+label.importing=Importar: 
+label.exporting=Exportar: 
 label.syllabifying=Silabificar: 
 label.parserresult=Resultado del analizador
 label.untested=No probado
