SYLP-38 Add import from FLEx Wordforms, tab-delimited export

--- a/src/sil/org/syllableparser/resources/SyllableParser_en.properties
+++ b/src/sil/org/syllableparser/resources/SyllableParser_en.properties
@@ -8,6 +8,7 @@ menu.save=Save
 menu.saveas=Save As...
 menu.importwords=Import Words
 menu.importplainwordlist=Import text file with one word per line
+menu.importflexwordlist=Import word list exported from FLEx (in tab-delimited form)
 menu.importparatextwordlist=Import word list exported from ParaTExt
 menu.importparatexthyphenatedwords=Import hyphenatedWords.txt file from ParaTExt
 menu.exporthyphenatedwords=Export Hyphenated Words
