--- a/src/sil/org/syllableparser/resources/SyllableParser_es.properties
+++ b/src/sil/org/syllableparser/resources/SyllableParser_es.properties
@@ -8,6 +8,7 @@ menu.save=Guardar
 menu.saveas=Guardar Como...
 menu.importwords=Importar Palabras
 menu.importplainwordlist=Importar archivo de texto con una palabra por l\u00ednea
+menu.importflexwordlist=Importar lista de palabras exportado del programa FLEx (en forma tab-delimited)
 menu.importparatextwordlist=Importar lista de palabras exportado del programa ParaTExt
 menu.importparatexthyphenatedwords=Importar el archivo hyphenatedWords.txt del programa ParaTExt
 menu.exporthyphenatedwords=Exportar Palabras con Guiones
