First pass at adding active state to segments.

--- a/src/sil/org/syllableparser/resources/SyllableParser_es.properties
+++ b/src/sil/org/syllableparser/resources/SyllableParser_es.properties
@@ -86,6 +86,7 @@ label.syllablepatterns=Modelo de S\u00edlabas
 label.name=Nombre
 label.cancel=Cancelar
 label.help=Ayuda
+label.active=Usa
 label.ok=OK
 label.segmentsandnaturalclasses=Seg. o CN
 label.choosenc=Seleccionar uno o m\u00e1s clases naturales
