SYLP-35: add font info for vernacular and analysis languages.

--- a/src/sil/org/syllableparser/resources/SyllableParser_es.properties
+++ b/src/sil/org/syllableparser/resources/SyllableParser_es.properties
@@ -22,6 +22,9 @@ menu.copy=Copiar
 menu.paste=Pegar
 menu.insertnew=Nueva \u00cdtem
 menu.remove=Remover \u00cdtem
+menu.language=Lengua
+menu.vernacularfont=Fuente Vernacular
+menu.analysisfont=Fuente Anal\u00edtica
 menu.tools=Herramientas
 menu.syllabifywords=Silabificar Palabras
 menu.convertpredictedtocorrect=Convertir la predicho para corregir silabificaci\u00f3n
