Add periodic save code (but not invoke yet); add cancel code as how-to sample in list word exporter.

--- a/src/sil/org/syllableparser/resources/SyllableParser_es.properties
+++ b/src/sil/org/syllableparser/resources/SyllableParser_es.properties
@@ -100,7 +100,9 @@ label.predictedsyllabification=Silabificaci\u00f3n Predicada
 label.correctsyllabification=Silabificaci\u00f3n Correcta
 label.discussion=Discussi\u00f3n
 label.importing=Importar: 
-label.exporting=Exportar: 
+label.importingcanceled=Es: Importing canceled!
+label.exporting=Exporting: 
+label.exportingcanceled=Es: Exporting canceled!
 label.syllabifying=Silabificar: 
 label.parserresult=Resultado del analizador
 label.untested=No probado
