SYLP-32, SYLP-33: add backup and restore

--- a/src/sil/org/syllableparser/resources/SyllableParser_es.properties
+++ b/src/sil/org/syllableparser/resources/SyllableParser_es.properties
@@ -6,6 +6,9 @@ menu.new=Nuevo
 menu.open=Abrir...
 menu.save=Guardar
 menu.saveas=Guardar Como...
+menu.projectmanagement=Administraci\u00f3n de proyectos
+menu.projectmanagementbackup=Respaldar este proyecto...
+menu.projectmanagementrestore=Restaurar un proyecto...
 menu.importwords=Importar Palabras
 menu.importplainwordlist=Importar archivo de texto con una palabra por l\u00ednea
 menu.importflexwordlist=Importar lista de palabras exportado del programa FLEx (en forma tab-delimited)
@@ -82,6 +85,7 @@ onc.view.words=ONC Words
 label.segmentinventory=Inventorio de segmentos
 label.segment=Segmento
 label.orthographicforms=Formas ortograf\u00eda
+label.date=Fecha
 label.description=Descripci\u00f3n
 label.naturalclasses=Clases Naturales
 label.segmentornaturalclass=Segmento o Clase Naturale
@@ -92,13 +96,18 @@ label.help=Ayuda
 label.active=Usa
 label.ok=OK
 label.segmentsandnaturalclasses=Seg. o CN
+label.backupdirectory=Carpeta de archivos de respalda: 
+label.browse=Buscar
+label.choosebackup=Seleccionar un archivo de respalda para restaurar:
 label.choosenc=Seleccionar uno o m\u00e1s clases naturales
+label.filename=Nombre del archivo
 label.choosesnc=Seleccionar uno o m\u00e1s segmentos y/o clases naturales
 label.word=Palabra
 label.words=Palabras
 label.predictedsyllabification=Silabificaci\u00f3n Predicada
 label.correctsyllabification=Silabificaci\u00f3n Correcta
 label.discussion=Discussi\u00f3n
+label.backupcomment=Teclar una descripci\u00f3n para este backup:
 label.importing=Importar: 
 label.importingcanceled=Es: Importing canceled!
 label.exporting=Exporting: 
@@ -117,6 +126,7 @@ label.wordtofind=Palabra para buscar:
 label.wordpredictedvscorrect=Predicci\u00f3n vs. silabeo correcta
 # menu.syllabifywords goes at the end of the following message
 label.nopredictedvscorrect=No hay diferencias entre silabificaci\u00f3nes predichos y corregir.\nO bien todos silabificaci\u00f3nes predichos son correctos,\nno hay palabras,\ntodas las palabras no lograron silabear, o\nusted necesita para invocar 
+label.restoreproject=Restaurar un proyecto
 
 # file loading/saving
 file.error=Error
