--- a/src/sil/org/syllableparser/resources/SyllableParser_es.properties
+++ b/src/sil/org/syllableparser/resources/SyllableParser_es.properties
@@ -1,42 +1,42 @@
 # Spanish internationalization file for Syllable Parser
 program.name=Asheninka
 # menu items
-menu.file=Archivo
-menu.new=Nuevo
-menu.open=Abrir...
-menu.save=Guardar
-menu.saveas=Guardar Como...
-menu.projectmanagement=Administraci\u00f3n de proyectos
-menu.projectmanagementbackup=Respaldar este proyecto...
-menu.projectmanagementrestore=Restaurar un proyecto...
-menu.importwords=Importar Palabras
-menu.importplainwordlist=Importar archivo de texto con una palabra por l\u00ednea
-menu.importflexwordlist=Importar lista de palabras exportado del programa FLEx (en forma tab-delimited)
-menu.importparatextwordlist=Importar lista de palabras exportado del programa ParaTExt
-menu.importparatexthyphenatedwords=Importar el archivo hyphenatedWords.txt del programa ParaTExt
-menu.exporthyphenatedwords=Exportar Palabras con Guiones
-menu.exporthyphenatedwordsforindesign=Exportar para InDesign (una lista)
-menu.exporthyphenatedwordsforparatext=Exportar para ParaTExt (hyphenatedWords.txt)
-menu.exporthyphenatedwordsforxlingpaper=Exportar para XLingPaper (hyphenations exception file)
-menu.exit=Quitar
-menu.edit=Editar
-menu.cut=Cortar
-menu.copy=Copiar
-menu.paste=Pegar
-menu.insertnew=Nueva \u00cdtem
-menu.remove=Remover \u00cdtem
-menu.language=Lengua
-menu.vernacularfont=Fuente Vernacular
-menu.analysisfont=Fuente Anal\u00edtica
-menu.tools=Herramientas
-menu.syllabifywords=Silabificar Palabras
-menu.convertpredictedtocorrect=Convertir la predicho para corregir silabificaci\u00f3n
-menu.findword=Encontrar la palabra
-menu.view=Vista
-menu.changeinterfacelanguage=Cambiar lengua del Interfaz
-menu.help=Ayuda
-menu.about=A cerca de Asheninka
-menu.helpintro=Introducci\u00f3n a la silabificaci\u00f3n
+menu.file=_Archivo
+menu.new=_Nuevo
+menu.open=A_brir...
+menu.save=_Guardar
+menu.saveas=Guardar _Como...
+menu.projectmanagement=Administraci\u00f3n de _proyectos
+menu.projectmanagementbackup=_Respaldar este proyecto...
+menu.projectmanagementrestore=R_estaurar un proyecto...
+menu.importwords=_Importar Palabras
+menu.importplainwordlist=Importar archivo de _texto con una palabra por l\u00ednea
+menu.importflexwordlist=Importar lista de palabras exportado del programa _FLEx (en forma tab-delimited)
+menu.importparatextwordlist=Importar lista de palabras exportado del programa _ParaTExt
+menu.importparatexthyphenatedwords=Importar el archivo _hyphenatedWords.txt del programa ParaTExt
+menu.exporthyphenatedwords=_Exportar Palabras con Guiones
+menu.exporthyphenatedwordsforindesign=Exportar para _InDesign (una lista)
+menu.exporthyphenatedwordsforparatext=Exportar para _ParaTExt (hyphenatedWords.txt)
+menu.exporthyphenatedwordsforxlingpaper=Exportar para _XLingPaper (hyphenations exception file)
+menu.exit=_Quitar
+menu.edit=_Editar
+menu.cut=Cor_tar
+menu.copy=_Copiar
+menu.paste=_Pegar
+menu.insertnew=_Nueva \u00cdtem
+menu.remove=_Remover \u00cdtem
+menu.language=_Lengua
+menu.vernacularfont=Fuente _Vernacular
+menu.analysisfont=Fuente _Anal\u00edtica
+menu.tools=_Herramientas
+menu.syllabifywords=_Silabificar Palabras
+menu.convertpredictedtocorrect=_Convertir la predicho para corregir silabificaci\u00f3n
+menu.findword=_Encontrar la palabra
+menu.view=_Vista
+menu.changeinterfacelanguage=_Cambiar lengua del Interfaz
+menu.help=A_yuda
+menu.about=_A cerca de Asheninka
+menu.helpintro=_Introducci\u00f3n a la silabificaci\u00f3n
 
 # About dialog
 about.header=A cerca Asheninka
@@ -55,7 +55,7 @@ dialog.chooseinterfacelanguage=Selecionar el lengua del interfaz
 dialog.chooselanguage=Selecionar lengua:
  
 #Approaches
-approach.cv=CV Pattern
+approach.cv=Patr\u00f3n del CV
 approach.sonorityhierarchy=Sonority Hierarchy
 approach.onc=Onset-Nucleus-Coda
 approach.moraic=Moraic
@@ -63,9 +63,9 @@ approach.nuclearprojection=Nuclear Projection
 approach.ot=Optimality Theory
 
 #Views within approaches
-cv.view.segmentinventory=CV Segment Inventory
-cv.view.naturalclass=CV Natural Classes
-cv.view.syllablepatterns=CV Syllable Patterns
+cv.view.segmentinventory=Segmentos del CV
+cv.view.naturalclass=Classes Naturales del CV
+cv.view.syllablepatterns=Patr\u00f3nes de S\u00edlibas del CV
 cv.view.syllablepatterns.up=Mover Arriba
 cv.view.syllablepatterns.down=Mover Abajo
 cv.view.syllablepatterns.remove=Remover
@@ -74,7 +74,7 @@ cv.view.syllablepatterns.ncsequence=La sequenc\u00eda de clases naturales va a a
 cv.view.syllablepatterns.ncs=Classes naturales
 cv.view.syllablepatterns.remove=Remover
 cv.view.syllablepatterns.wordboundary=L\u00edmite de palabra
-cv.view.words=CV Words
+cv.view.words=Palabras del CV
 cv.view.wordspredictedvscorrect=Predicci\u00f3n vs Corregir
  
 onc.view.segmentinventory=ONC Segment Inventory
@@ -143,4 +143,16 @@ checkbox.context.menu.toggle=Cambiar
 # Micellaneous
 misc.niyheader=Lo siento
 misc.niycontent=Todav\u00eda no implementado.
-  
+
+# Tooltips
+tooltip.new=Nuevo   Ctrl+N
+tooltip.open=Abrir   Ctrl+O
+tooltip.save=Guardar   Ctrl+S
+tooltip.cut=Cortar   Ctrl+X
+tooltip.copy=Copiar   Ctrl+C
+tooltip.paste=Pegar   Ctrl+P
+tooltip.insertnew=Nueva \u00cdtem   Ctrl+I
+tooltip.remove=Remover \u00cdtem   Ctrl+D
+tooltip.syllabifywords=Silabificar Palabras   Ctrl+W
+tooltip.convertpredictedtocorrect=Convertir la predicho para corregir silabificaci\u00f3n
+tooltip.findword=Encontrar la palabra   Ctrl+F
