SYLP-17 When started for the first time, ask to create a new project or open an existing one.

--- a/src/sil/org/syllableparser/resources/SyllableParser_es.properties
+++ b/src/sil/org/syllableparser/resources/SyllableParser_es.properties
@@ -127,6 +127,8 @@ label.wordpredictedvscorrect=Predicci\u00f3n vs. silabeo correcta
 # menu.syllabifywords goes at the end of the following message
 label.nopredictedvscorrect=No hay diferencias entre silabificaci\u00f3nes predichos y corregir.\nO bien todos silabificaci\u00f3nes predichos son correctos,\nno hay palabras,\ntodas las palabras no lograron silabear, o\nusted necesita para invocar 
 label.restoreproject=Restaurar un proyecto
+label.createnewproject=Crear proyecto nuevo
+label.openexistingproject=Abrir proyecto
 
 # file loading/saving
 file.error=Error
@@ -134,6 +136,8 @@ file.error.load.header=No se puede obtenir data
 file.error.load.content=No se puede obtenir data del archivo:\n
 file.error.save.header=No se puede guardar data
 file.error.save.content=No se puede guardar data al archivo:\n
+file.initiallynotfound=Al parecer, este programa no se ha ejecutado antes.
+file.chooseanoption=Escoge una opci\u00f3n:
 
 # Check Box context menu
 checkbox.context.menu.clearall=Remover Todos
