Add remove words tool

--- a/src/sil/org/syllableparser/resources/SyllableParser_es.properties
+++ b/src/sil/org/syllableparser/resources/SyllableParser_es.properties
@@ -32,6 +32,7 @@ menu.tools=_Herramientas
 menu.syllabifywords=_Silabificar Palabras
 menu.convertpredictedtocorrect=_Convertir la predicho para corregir silabificaci\u00f3n
 menu.findword=_Encontrar la palabra
+menu.clearwords=_Remover todas las palabras
 menu.view=_Vista
 menu.changeinterfacelanguage=_Cambiar lengua del Interfaz
 menu.help=A_yuda
@@ -129,6 +130,8 @@ label.nopredictedvscorrect=No hay diferencias entre silabificaci\u00f3nes predic
 label.restoreproject=Restaurar un proyecto
 label.createnewproject=Crear proyecto nuevo
 label.openexistingproject=Abrir proyecto
+label.clearwords=Remover todas las palabras\nFavor de respaldar los datos antes de hacer esto.
+label.areyousure=\u00bfEstas seguro?
 
 # file loading/saving
 file.error=Error
