Add HTML formatter for comparer

--- a/src/sil/org/syllableparser/resources/SyllableParser_es.properties
+++ b/src/sil/org/syllableparser/resources/SyllableParser_es.properties
@@ -66,7 +66,7 @@ approach.ot=Optimality Theory
 #Views within approaches
 cv.view.segmentinventory=Segmentos del CV
 cv.view.naturalclass=Classes Naturales del CV
-cv.view.syllablepatterns=Patr\u00f3nes de S\u00edlibas del CV
+cv.view.syllablepatterns=Patrones de S\u00edlibas del CV
 cv.view.syllablepatterns.up=Mover Arriba
 cv.view.syllablepatterns.down=Mover Abajo
 cv.view.syllablepatterns.remove=Remover
@@ -163,3 +163,27 @@ tooltip.remove=Remover \u00cdtem   Ctrl+D
 tooltip.syllabifywords=Silabificar Palabras   Ctrl+W
 tooltip.convertpredictedtocorrect=Convertir la predicho para corregir silabificaci\u00f3n
 tooltip.findword=Encontrar la palabra   Ctrl+F
+
+# Differences reports
+report.cvtitle=Comparaci\u00f3n del CV Approach
+report.comparisonof=Comparaci\u00f3n del CV Approach entre
+report.performedon=Presentado en 
+report.segmentinventory=Inventorio de segmentos
+report.samesegmentinventory=Ambos tienen el mismo inventario segmento.
+report.segmentswhichdiffer=Los siguientes segmentos difieren entre los dos.
+report.first=Primer{0}
+report.second=Segund{0}
+report.adjectivalendingf=a
+report.adjectivalendingm=o
+report.cvnaturalclasses=Clases Naturales
+report.samecvnaturalclasses=Ambos tienen las mismas clases naturales.
+report.cvnaturalclasseswhichdiffer=Las siguientes clases naturales difieren entre los dos.
+report.cvsyllablepatterns=Patrones de S\u00edlibas
+report.samecvsyllablpatterns=Ambos tienen los mismos patrones de s\u00edlabas.
+report.cvsyllablepatternswhichdiffer=Los siguientes patrones de s\u00edlabas difieren entre los dos.
+report.cvsyllablepatternsorder=El orden de los patrones de s\u00edlaba se muestra a continuaci\u00f3n.
+report.words=Palabras
+report.samewords=Ambos tienen las mismas palabras con las mismas s\u00edlabas.
+report.wordswhichdiffer=Las siguientes palabras son diferentes entre los dos.
+report.syllabification=Silabeo
+
