Part 1 on creating CV comparison dialog

--- a/src/sil/org/syllableparser/resources/SyllableParser_es.properties
+++ b/src/sil/org/syllableparser/resources/SyllableParser_es.properties
@@ -132,6 +132,8 @@ label.createnewproject=Crear proyecto nuevo
 label.openexistingproject=Abrir proyecto
 label.clearwords=Remover todas las palabras\nFavor de respaldar los datos antes de hacer esto.
 label.areyousure=\u00bfEstas seguro?
+label.firstimplementation=Primera implementaci\u00f3n:
+label.secondimplementation=Segunda implementaci\u00f3n:
 
 # file loading/saving
 file.error=Error
@@ -163,6 +165,10 @@ tooltip.remove=Remover \u00cdtem   Ctrl+D
 tooltip.syllabifywords=Silabificar Palabras   Ctrl+W
 tooltip.convertpredictedtocorrect=Convertir la predicho para corregir silabificaci\u00f3n
 tooltip.findword=Encontrar la palabra   Ctrl+F
+
+#Radio buttons
+radio.current=La implementaci\u00f3n actual
+radio.choosebackup=Elija una copia de seguridad
 
 # Differences reports
 report.cvtitle=Comparaci\u00f3n del CV Approach
