More on comparer

--- a/src/sil/org/syllableparser/resources/SyllableParser_es.properties
+++ b/src/sil/org/syllableparser/resources/SyllableParser_es.properties
@@ -33,6 +33,7 @@ menu.syllabifywords=_Silabificar Palabras
 menu.convertpredictedtocorrect=_Convertir la predicho para corregir silabificaci\u00f3n
 menu.findword=_Encontrar la palabra
 menu.clearwords=_Remover todas las palabras
+menu.compareimplementations=Comparar _implementaciones
 menu.view=_Vista
 menu.changeinterfacelanguage=_Cambiar lengua del Interfaz
 menu.help=A_yuda
@@ -132,6 +133,8 @@ label.createnewproject=Crear proyecto nuevo
 label.openexistingproject=Abrir proyecto
 label.clearwords=Remover todas las palabras\nFavor de respaldar los datos antes de hacer esto.
 label.areyousure=\u00bfEstas seguro?
+label.compare=Comparar
+label.compareimplementations=Comparar Implementaciones
 label.firstimplementation=Primera implementaci\u00f3n:
 label.secondimplementation=Segunda implementaci\u00f3n:
 
