Another pass on comparing versions, including UI.

--- a/src/sil/org/syllableparser/resources/SyllableParser_es.properties
+++ b/src/sil/org/syllableparser/resources/SyllableParser_es.properties
@@ -137,6 +137,7 @@ label.compare=Comparar
 label.compareimplementations=Comparar Implementaciones
 label.firstimplementation=Primera implementaci\u00f3n:
 label.secondimplementation=Segunda implementaci\u00f3n:
+label.pleasewait=Favor de esperar...
 
 # file loading/saving
 file.error=Error
