Refine compare messages; update platform build files.

--- a/src/sil/org/syllableparser/resources/SyllableParser_es.properties
+++ b/src/sil/org/syllableparser/resources/SyllableParser_es.properties
@@ -140,7 +140,10 @@ label.compare=Comparar
 label.compareimplementations=Comparar Implementaciones
 label.firstimplementation=Primera implementaci\u00f3n:
 label.secondimplementation=Segunda implementaci\u00f3n:
+label.sameimplementationsheader=Mismas implementaciones
+label.sameimplementationscontent=Las dos implementaciones elegidos son los mismos. Por lo tanto , son id\u00e9nticos.
 label.pleasewait=Favor de esperar...
+label.pleasewaitexplanation=Este proceso puede tardar unos segundos o varios minutos dependiendo del n\u00famero de diferencias que hay.
 
 # file loading/saving
 file.error=Error
