First draft of user doc; add views to View menu; add 64bit build xml files

--- a/src/sil/org/syllableparser/resources/SyllableParser_es.properties
+++ b/src/sil/org/syllableparser/resources/SyllableParser_es.properties
@@ -41,6 +41,7 @@ menu.view=_Vista
 menu.changeinterfacelanguage=_Cambiar lengua del Interfaz
 menu.help=A_yuda
 menu.about=_A cerca de Asheninka
+menu.userdocumentation=Manual del Usuario
 menu.helpintro=_Introducci\u00f3n a la silabificaci\u00f3n
 
 # About dialog
