--- a/src/sil/org/syllableparser/resources/SyllableParser_es.properties
+++ b/src/sil/org/syllableparser/resources/SyllableParser_es.properties
@@ -122,8 +122,8 @@ label.syllabifying=Silabificar:
 label.parserresult=Resultado del analizador
 label.untested=No probado
 label.success=\u00c9xito
-label.cvsegmentfailure=Fracaso: no se pudo analizar en segmentos
-label.cvnaturalclassfailure=Fracaso: no se pudo analizar en clases naturales
+label.cvsegmentfailure=Fracaso: no se pudo analizar en segmentos comensado a '{0}'.
+label.cvnaturalclassfailure=Fracaso: no se pudo analizar en clases naturales; encontr\u00f3 clases '{0}' por grafemas '{1}'.
 label.cvsyllabificationfailure=Fracaso: no se pudo analizar clases naturales en s\u00edlabas
 label.choosepredicted=Elija el que predijo silabificaci\u00f3nes convertir corregir silabeo
 # menu.syllabifywords goes at the end of the following message
