--- a/src/sil/org/syllableparser/resources/SyllableParser_es.properties
+++ b/src/sil/org/syllableparser/resources/SyllableParser_es.properties
@@ -20,7 +20,11 @@ menu.importparatexthyphenatedwords=Importar el archivo _hyphenatedWords.txt del 
 menu.exporthyphenatedwords=_Exportar Palabras con Guiones
 menu.exporthyphenatedwordsforindesign=Exportar para _InDesign (una lista)
 menu.exporthyphenatedwordsforparatext=Exportar para _ParaTExt (hyphenatedWords.txt)
-menu.exporthyphenatedwordsforxlingpaper=Exportar para _XLingPaper (hyphenations exception file)
+menu.exporthyphenatedwordsforxlingpaper=Exportar para _XLingPaper (hyphenation exceptions file)
+menu.exporthyphenationparameters=Par\u00e1metros de Palabras con Guiones 
+menu.exporthyphenationparametersforindesign=Par\u00e1metros para InDesign (simple list)
+menu.exporthyphenationparametersforparatext=Par\u00e1metros para ParaTExt (hyphenatedWords.txt)
+menu.exporthyphenationparametersforxlingpaper=Par\u00e1metros para XLingPaper (hyphenation exceptions file)
 menu.exit=_Quitar
 menu.edit=_Editar
 menu.cut=Cor_tar
@@ -28,9 +32,10 @@ menu.copy=_Copiar
 menu.paste=_Pegar
 menu.insertnew=_Nueva \u00cdtem
 menu.remove=_Remover \u00cdtem
-menu.language=_Lengua
+#menu.language=_Lengua
 menu.vernacularfont=Fuente _Vernacular
 menu.analysisfont=Fuente _Anal\u00edtica
+menu.parser=Analizado_r
 menu.tools=_Herramientas
 menu.syllabifywords=_Silabificar Palabras
 menu.convertpredictedtocorrect=_Convertir la predicho para corregir silabificaci\u00f3n
@@ -39,6 +44,7 @@ menu.clearwords=_Remover todas las palabras
 menu.compareimplementations=Comparar _implementaciones
 menu.view=_Vista
 menu.changeinterfacelanguage=_Cambiar lengua del Interfaz
+menu.settings=Ajustes
 menu.help=A_yuda
 menu.about=_A cerca de Asheninka
 menu.userdocumentation=Manual del Usuario
@@ -46,7 +52,7 @@ menu.helpintro=_Introducci\u00f3n a la silabificaci\u00f3n
 
 # About dialog
 about.header=A cerca Asheninka
-about.content=Un programa ling\u00fc\u00edstico para investigar sylabificaci\u00f3n\ny proporcionar un enfoque basado en principios de insertar guiones en palabras.\nVersi\u00f3n: {0}\n\n\n\u00a9 2016 SIL International\nEste software est\u00e1 licenciado bajo la LGPL , versi\u00f3n 2.1 o posterior\n(http://www.gnu.org/licenses/lgpl-2.1.html)
+about.content=Un programa ling\u00fc\u00edstico para investigar sylabificaci\u00f3n\ny proporcionar un enfoque basado en principios de insertar guiones en palabras.\nVersi\u00f3n: {0}\n\n\n\u00a9 2016-2017 SIL International\nEste software est\u00e1 licenciado bajo la LGPL , versi\u00f3n 2.1 o posterior\n(http://www.gnu.org/licenses/lgpl-2.1.html)
 
 #File Open/Save As dialog; import/export
 file.filterdescription=Archivos del programa Asheninka
@@ -99,6 +105,13 @@ label.syllablepatterns=Modelo de S\u00edlabas
 label.name=Nombre
 label.cancel=Cancelar
 label.help=Ayuda
+label.hyphenationparameters=Par\u00e1metros de palabras con guiones para {0}
+label.hyphenationparametersindesign=InDesign (simple list)
+label.hyphenationparametersparatext=ParaTExt (hyphenatedWords.txt)
+label.hyphenationparametersxlingpaper=XLingPaper (hyphenation exceptions file)
+label.discretionaryhyphen=Car\u00e1cter(s) de gui\u00f3n discrecional:
+label.hyphenationstartsafter=El gui\u00f3n comienza despu\u00e9s de muchos caracteres desde el principio:
+label.hyphenationstopsbefore=El gui\u00f3n se detiene antes de esto muchos personajes desde el final:
 label.active=Usa
 label.ok=OK
 label.segmentsandnaturalclasses=Seg. o CN
@@ -121,6 +134,7 @@ label.exportingcanceled=Es: Exporting canceled!
 label.syllabifying=Silabificar: 
 label.parserresult=Resultado del analizador
 label.untested=No probado
+label.sethyphenationparameters=Establecer Par\u00e1metros de Palabras con Guiones
 label.success=\u00c9xito
 label.cvsegmentfailure=Fracaso: no se pudo analizar en segmentos comensado a '{0}'.
 label.cvnaturalclassfailure=Fracaso: no se pudo analizar en clases naturales; encontr\u00f3 clases '{0}' por grafemas '{1}'.
