Improve save as with force save; add message

--- a/src/sil/org/syllableparser/resources/SyllableParser_es.properties
+++ b/src/sil/org/syllableparser/resources/SyllableParser_es.properties
@@ -61,6 +61,8 @@ file.paratexthyphenatedwordsfilterdescription=hyphenatedWords.txt archivo del pr
 file.paratextexportedwordlistfilterdescription=Archivos de lista de palabras exportados del programa ParaTExt
 file.exportedhyphenationlistfilterdescription=Archivos de separaci\u00f3n sil\u00e1bica
 file.xlingpaperhyphenationexceptionfilterdescription=Archivos de excepciones de separaci\u00f3n sil\u00e1bica para el programa XLingPaper 
+file.requiresaveheader=\u00a1Importante!
+file.requiresavecontent=Favor de guardar el archivo.
 
 #Choose Interface Language dialog
 dialog.chooseinterfacelanguage=Selecionar el lengua del interfaz
