--- a/src/sil/org/syllableparser/resources/SyllableParser_es.properties
+++ b/src/sil/org/syllableparser/resources/SyllableParser_es.properties
@@ -9,7 +9,7 @@ menu.new=_Nuevo
 menu.open=A_brir...
 menu.save=_Guardar
 menu.saveas=Guardar _Como...
-menu.projectmanagement=Administraci\u00f3n de _proyectos
+menu.projectmanagement=Administración de _proyectos
 menu.projectmanagementbackup=_Respaldar este proyecto...
 menu.projectmanagementrestore=R_estaurar un proyecto...
 menu.importwords=_Importar Palabras
@@ -41,6 +41,7 @@ menu.syllabifywords=_Silabificar Palabras
 menu.convertpredictedtocorrect=_Convertir la predicho para corregir silabificaci\u00f3n
 menu.findword=_Encontrar la palabra
 menu.clearwords=_Remover todas las palabras
+menu.clearcorrectsyllabificationinwords=Remover _silabificación correcta en todas las palabras
 menu.compareimplementations=Comparar _implementaciones
 menu.view=_Vista
 menu.changeinterfacelanguage=_Cambiar lengua del Interfaz
@@ -152,6 +153,7 @@ label.restoreproject=Restaurar un proyecto
 label.createnewproject=Crear proyecto nuevo
 label.openexistingproject=Abrir proyecto
 label.clearwords=Remover todas las palabras\nFavor de respaldar los datos antes de hacer esto.
+label.clearcorrectsyllabificationinwords=Eliminar todos los formularios de silabificación correcta en todas las palabras de la lista de palabras\nFavor de respaldar los datos antes de hacer esto.
 label.areyousure=\u00bfEstas seguro?
 label.compare=Comparar
 label.compareimplementations=Comparar Implementaciones
