Fix UTF-8 encodings in Spanish localization file

--- a/src/sil/org/syllableparser/resources/SyllableParser_es.properties
+++ b/src/sil/org/syllableparser/resources/SyllableParser_es.properties
@@ -13,7 +13,7 @@ menu.projectmanagement=Administración de _proyectos
 menu.projectmanagementbackup=_Respaldar este proyecto...
 menu.projectmanagementrestore=R_estaurar un proyecto...
 menu.importwords=_Importar Palabras
-menu.importplainwordlist=Importar archivo de _texto con una palabra por l\u00ednea
+menu.importplainwordlist=Importar archivo de _texto con una palabra por línea
 menu.importflexwordlist=Importar lista de palabras exportado del programa _FLEx (en forma tab-delimited)
 menu.importparatextwordlist=Importar lista de palabras exportado del programa _ParaTExt
 menu.importparatexthyphenatedwords=Importar el archivo _hyphenatedWords.txt del programa ParaTExt
@@ -21,24 +21,24 @@ menu.exporthyphenatedwords=_Exportar Palabras con Guiones
 menu.exporthyphenatedwordsforindesign=Exportar para _InDesign (una lista)
 menu.exporthyphenatedwordsforparatext=Exportar para _ParaTExt (hyphenatedWords.txt)
 menu.exporthyphenatedwordsforxlingpaper=Exportar para _XLingPaper (hyphenation exceptions file)
-menu.exporthyphenationparameters=Par\u00e1metros de Palabras con Guiones 
-menu.exporthyphenationparametersforindesign=Par\u00e1metros para InDesign (simple list)
-menu.exporthyphenationparametersforparatext=Par\u00e1metros para ParaTExt (hyphenatedWords.txt)
-menu.exporthyphenationparametersforxlingpaper=Par\u00e1metros para XLingPaper (hyphenation exceptions file)
+menu.exporthyphenationparameters=Parámetros de Palabras con Guiones 
+menu.exporthyphenationparametersforindesign=Parámetros para InDesign (simple list)
+menu.exporthyphenationparametersforparatext=Parámetros para ParaTExt (hyphenatedWords.txt)
+menu.exporthyphenationparametersforxlingpaper=Parámetros para XLingPaper (hyphenation exceptions file)
 menu.exit=_Quitar
 menu.edit=_Editar
 menu.cut=Cor_tar
 menu.copy=_Copiar
 menu.paste=_Pegar
-menu.insertnew=_Nueva \u00cdtem
-menu.remove=_Remover \u00cdtem
+menu.insertnew=_Nueva Ítem
+menu.remove=_Remover Ítem
 #menu.language=_Lengua
 menu.vernacularfont=Fuente _Vernacular
-menu.analysisfont=Fuente _Anal\u00edtica
+menu.analysisfont=Fuente _Analítica
 menu.parser=Analizado_r
 menu.tools=_Herramientas
 menu.syllabifywords=_Silabificar Palabras
-menu.convertpredictedtocorrect=_Convertir la predicho para corregir silabificaci\u00f3n
+menu.convertpredictedtocorrect=_Convertir la predicho para corregir silabificación
 menu.findword=_Encontrar la palabra
 menu.clearwords=_Remover todas las palabras
 menu.clearcorrectsyllabificationinwords=Remover _silabificación correcta en todas las palabras
@@ -49,20 +49,20 @@ menu.settings=Ajustes
 menu.help=A_yuda
 menu.about=_A cerca de Asheninka
 menu.userdocumentation=Manual del Usuario
-menu.helpintro=_Introducci\u00f3n a la silabificaci\u00f3n
+menu.helpintro=_Introducción a la silabificación
 
 # About dialog
 about.header=A cerca Asheninka
-about.content=Un programa ling\u00fc\u00edstico para investigar sylabificaci\u00f3n\ny proporcionar un enfoque basado en principios de insertar guiones en palabras.\nVersi\u00f3n: {0}\n\n\n\u00a9 2016-2017 SIL International\nEste software est\u00e1 licenciado bajo la LGPL , versi\u00f3n 2.1 o posterior\n(http://www.gnu.org/licenses/lgpl-2.1.html)
+about.content=Un programa lingüístico para investigar sylabificación\ny proporcionar un enfoque basado en principios de insertar guiones en palabras.\nVersión: {0}\n\n\n© 2016-2017 SIL International\nEste software está licenciado bajo la LGPL , versión 2.1 o posterior\n(http://www.gnu.org/licenses/lgpl-2.1.html)
 
 #File Open/Save As dialog; import/export
 file.filterdescription=Archivos del programa Asheninka
 file.plainlistimportfilterdescription=Archivos simples
 file.paratexthyphenatedwordsfilterdescription=hyphenatedWords.txt archivo del programa ParaTExt
 file.paratextexportedwordlistfilterdescription=Archivos de lista de palabras exportados del programa ParaTExt
-file.exportedhyphenationlistfilterdescription=Archivos de separaci\u00f3n sil\u00e1bica
-file.xlingpaperhyphenationexceptionfilterdescription=Archivos de excepciones de separaci\u00f3n sil\u00e1bica para el programa XLingPaper 
-file.requiresaveheader=\u00a1Importante!
+file.exportedhyphenationlistfilterdescription=Archivos de separación silábica
+file.xlingpaperhyphenationexceptionfilterdescription=Archivos de excepciones de separación silábica para el programa XLingPaper 
+file.requiresaveheader=¡Importante!
 file.requiresavecontent=Favor de guardar el archivo.
 
 #Choose Interface Language dialog
@@ -70,7 +70,7 @@ dialog.chooseinterfacelanguage=Selecionar el lengua del interfaz
 dialog.chooselanguage=Selecionar lengua:
  
 #Approaches
-approach.cv=Patr\u00f3n del CV
+approach.cv=Patrón del CV
 approach.sonorityhierarchy=Sonority Hierarchy
 approach.onc=Onset-Nucleus-Coda
 approach.moraic=Moraic
@@ -80,17 +80,17 @@ approach.ot=Optimality Theory
 #Views within approaches
 cv.view.segmentinventory=Segmentos del CV
 cv.view.naturalclass=Classes Naturales del CV
-cv.view.syllablepatterns=Patrones de S\u00edlibas del CV
+cv.view.syllablepatterns=Patrones de Sílibas del CV
 cv.view.syllablepatterns.up=Mover Arriba
 cv.view.syllablepatterns.down=Mover Abajo
 cv.view.syllablepatterns.remove=Remover
-cv.view.syllablepatterns.choosencsequence=Seleccionar una sequenc\u00eda de clases naturales para este patr\u00f3n:
-cv.view.syllablepatterns.ncsequence=La sequenc\u00eda de clases naturales va a aparecerse aqui
+cv.view.syllablepatterns.choosencsequence=Seleccionar una sequencía de clases naturales para este patrón:
+cv.view.syllablepatterns.ncsequence=La sequencía de clases naturales va a aparecerse aqui
 cv.view.syllablepatterns.ncs=Classes naturales
 cv.view.syllablepatterns.remove=Remover
-cv.view.syllablepatterns.wordboundary=L\u00edmite de palabra
+cv.view.syllablepatterns.wordboundary=Límite de palabra
 cv.view.words=Palabras del CV
-cv.view.wordspredictedvscorrect=Predicci\u00f3n vs Corregir
+cv.view.wordspredictedvscorrect=Predicción vs Corregir
  
 onc.view.segmentinventory=ONC Segment Inventory
 onc.view.syllablepatterns=ONC Syllable Patterns
@@ -99,37 +99,37 @@ onc.view.words=ONC Words
 #labels
 label.segmentinventory=Inventorio de segmentos
 label.segment=Segmento
-label.orthographicforms=Formas ortograf\u00eda
+label.orthographicforms=Formas ortografía
 label.date=Fecha
-label.description=Descripci\u00f3n
+label.description=Descripción
 label.naturalclasses=Clases Naturales
 label.segmentornaturalclass=Segmento o Clase Naturale
-label.syllablepatterns=Modelo de S\u00edlabas
+label.syllablepatterns=Modelo de Sílabas
 label.name=Nombre
 label.cancel=Cancelar
 label.help=Ayuda
-label.hyphenationparameters=Par\u00e1metros de palabras con guiones para {0}
+label.hyphenationparameters=Parámetros de palabras con guiones para {0}
 label.hyphenationparametersindesign=InDesign (simple list)
 label.hyphenationparametersparatext=ParaTExt (hyphenatedWords.txt)
 label.hyphenationparametersxlingpaper=XLingPaper (hyphenation exceptions file)
-label.discretionaryhyphen=Car\u00e1cter(s) de gui\u00f3n discrecional:
-label.hyphenationstartsafter=El gui\u00f3n comienza despu\u00e9s de muchos caracteres desde el principio:
-label.hyphenationstopsbefore=El gui\u00f3n se detiene antes de esto muchos personajes desde el final:
+label.discretionaryhyphen=Carácter(s) de guión discrecional:
+label.hyphenationstartsafter=El guión comienza después de muchos caracteres desde el principio:
+label.hyphenationstopsbefore=El guión se detiene antes de esto muchos personajes desde el final:
 label.active=Usa
 label.ok=OK
 label.segmentsandnaturalclasses=Seg. o CN
 label.backupdirectory=Carpeta de archivos de respalda: 
 label.browse=Buscar
 label.choosebackup=Seleccionar un archivo de respalda para restaurar:
-label.choosenc=Seleccionar uno o m\u00e1s clases naturales
+label.choosenc=Seleccionar uno o más clases naturales
 label.filename=Nombre del archivo
-label.choosesnc=Seleccionar uno o m\u00e1s segmentos y/o clases naturales
+label.choosesnc=Seleccionar uno o más segmentos y/o clases naturales
 label.word=Palabra
 label.words=Palabras
-label.predictedsyllabification=Silabificaci\u00f3n Predicada
-label.correctsyllabification=Silabificaci\u00f3n Correcta
-label.discussion=Discussi\u00f3n
-label.backupcomment=Teclar una descripci\u00f3n para este backup:
+label.predictedsyllabification=Silabificación Predicada
+label.correctsyllabification=Silabificación Correcta
+label.discussion=Discussión
+label.backupcomment=Teclar una descripción para este backup:
 label.importing=Importar: 
 label.importingcanceled=Es: Importing canceled!
 label.exporting=Exporting: 
@@ -137,32 +137,32 @@ label.exportingcanceled=Es: Exporting canceled!
 label.syllabifying=Silabificar: 
 label.parserresult=Resultado del analizador
 label.untested=No probado
-label.sethyphenationparameters=Establecer Par\u00e1metros de Palabras con Guiones
-label.success=\u00c9xito
+label.sethyphenationparameters=Establecer Parámetros de Palabras con Guiones
+label.success=Éxito
 label.cvsegmentfailure=Fracaso: no se pudo analizar en segmentos comensado a '{0}'.
-label.cvnaturalclassfailure=Fracaso: no se pudo analizar en clases naturales; encontr\u00f3 clases '{0}' por grafemas '{1}'.
-label.cvsyllabificationfailure=Fracaso: no se pudo analizar clases naturales en s\u00edlabas
-label.choosepredicted=Elija el que predijo silabificaci\u00f3nes convertir corregir silabeo
+label.cvnaturalclassfailure=Fracaso: no se pudo analizar en clases naturales; encontró clases '{0}' por grafemas '{1}'.
+label.cvsyllabificationfailure=Fracaso: no se pudo analizar clases naturales en sílabas
+label.choosepredicted=Elija el que predijo silabificaciónes convertir corregir silabeo
 # menu.syllabifywords goes at the end of the following message
-label.nopredicted=No hay silabificaci\u00f3nes predichos.\nO bien no hay palabras,\ntodas las palabras no lograron silabear,\no usted necesita para invocar 
+label.nopredicted=No hay silabificaciónes predichos.\nO bien no hay palabras,\ntodas las palabras no lograron silabear,\no usted necesita para invocar 
 label.wordtofind=Palabra para buscar: 
-label.wordpredictedvscorrect=Predicci\u00f3n vs. silabeo correcta
+label.wordpredictedvscorrect=Predicción vs. silabeo correcta
 # menu.syllabifywords goes at the end of the following message
-label.nopredictedvscorrect=No hay diferencias entre silabificaci\u00f3nes predichos y corregir.\nO bien todos silabificaci\u00f3nes predichos son correctos,\nno hay palabras,\ntodas las palabras no lograron silabear, o\nusted necesita para invocar 
+label.nopredictedvscorrect=No hay diferencias entre silabificaciónes predichos y corregir.\nO bien todos silabificaciónes predichos son correctos,\nno hay palabras,\ntodas las palabras no lograron silabear, o\nusted necesita para invocar 
 label.restoreproject=Restaurar un proyecto
 label.createnewproject=Crear proyecto nuevo
 label.openexistingproject=Abrir proyecto
 label.clearwords=Remover todas las palabras\nFavor de respaldar los datos antes de hacer esto.
 label.clearcorrectsyllabificationinwords=Eliminar todos los formularios de silabificación correcta en todas las palabras de la lista de palabras\nFavor de respaldar los datos antes de hacer esto.
-label.areyousure=\u00bfEstas seguro?
+label.areyousure=¿Estas seguro?
 label.compare=Comparar
 label.compareimplementations=Comparar Implementaciones
-label.firstimplementation=Primera implementaci\u00f3n:
-label.secondimplementation=Segunda implementaci\u00f3n:
+label.firstimplementation=Primera implementación:
+label.secondimplementation=Segunda implementación:
 label.sameimplementationsheader=Mismas implementaciones
-label.sameimplementationscontent=Las dos implementaciones elegidos son los mismos. Por lo tanto , son id\u00e9nticos.
+label.sameimplementationscontent=Las dos implementaciones elegidos son los mismos. Por lo tanto , son idénticos.
 label.pleasewait=Favor de esperar...
-label.pleasewaitexplanation=Este proceso puede tardar unos segundos o varios minutos dependiendo del n\u00famero de diferencias que hay.
+label.pleasewaitexplanation=Este proceso puede tardar unos segundos o varios minutos dependiendo del número de diferencias que hay.
 
 # file loading/saving
 file.error=Error
@@ -171,7 +171,7 @@ file.error.load.content=No se puede obtenir data del archivo:\n
 file.error.save.header=No se puede guardar data
 file.error.save.content=No se puede guardar data al archivo:\n
 file.initiallynotfound=Al parecer, este programa no se ha ejecutado antes.
-file.chooseanoption=Escoge una opci\u00f3n:
+file.chooseanoption=Escoge una opción:
 
 # Check Box context menu
 checkbox.context.menu.clearall=Remover Todos
@@ -180,7 +180,7 @@ checkbox.context.menu.toggle=Cambiar
 
 # Micellaneous
 misc.niyheader=Lo siento
-misc.niycontent=Todav\u00eda no implementado.
+misc.niycontent=Todavía no implementado.
 
 # Tooltips
 tooltip.new=Nuevo   Ctrl+N
@@ -189,19 +189,19 @@ tooltip.save=Guardar   Ctrl+S
 tooltip.cut=Cortar   Ctrl+X
 tooltip.copy=Copiar   Ctrl+C
 tooltip.paste=Pegar   Ctrl+P
-tooltip.insertnew=Nueva \u00cdtem   Ctrl+I
-tooltip.remove=Remover \u00cdtem   Ctrl+D
+tooltip.insertnew=Nueva Ítem   Ctrl+I
+tooltip.remove=Remover Ítem   Ctrl+D
 tooltip.syllabifywords=Silabificar Palabras   Ctrl+W
-tooltip.convertpredictedtocorrect=Convertir la predicho para corregir silabificaci\u00f3n
+tooltip.convertpredictedtocorrect=Convertir la predicho para corregir silabificación
 tooltip.findword=Encontrar la palabra   Ctrl+F
 
 #Radio buttons
-radio.current=La implementaci\u00f3n actual
+radio.current=La implementación actual
 radio.choosebackup=Elija una copia de seguridad
 
 # Differences reports
-report.cvtitle=Comparaci\u00f3n del CV Approach
-report.comparisonof=Comparaci\u00f3n del CV Approach entre
+report.cvtitle=Comparación del CV Approach
+report.comparisonof=Comparación del CV Approach entre
 report.performedon=Presentado en 
 report.segmentinventory=Inventorio de segmentos
 report.samesegmentinventory=Ambos tienen el mismo inventario segmento.
@@ -213,12 +213,12 @@ report.adjectivalendingm=o
 report.cvnaturalclasses=Clases Naturales
 report.samecvnaturalclasses=Ambos tienen las mismas clases naturales.
 report.cvnaturalclasseswhichdiffer=Las siguientes clases naturales difieren entre los dos.
-report.cvsyllablepatterns=Patrones de S\u00edlibas
-report.samecvsyllablepatterns=Ambos tienen los mismos patrones de s\u00edlabas.
-report.cvsyllablepatternswhichdiffer=Los siguientes patrones de s\u00edlabas difieren entre los dos.
-report.cvsyllablepatternsorder=El orden de los patrones de s\u00edlaba se muestra a continuaci\u00f3n.
+report.cvsyllablepatterns=Patrones de Sílibas
+report.samecvsyllablepatterns=Ambos tienen los mismos patrones de sílabas.
+report.cvsyllablepatternswhichdiffer=Los siguientes patrones de sílabas difieren entre los dos.
+report.cvsyllablepatternsorder=El orden de los patrones de sílaba se muestra a continuación.
 report.words=Palabras
-report.samewords=Ambos tienen las mismas palabras con las mismas s\u00edlabas.
+report.samewords=Ambos tienen las mismas palabras con las mismas sílabas.
 report.wordswhichdiffer=Las siguientes palabras son diferentes entre los dos.
 report.syllabification=Silabeo
 
