First pass at adding a Try a Word dialog

--- a/src/sil/org/syllableparser/resources/SyllableParser_en.properties
+++ b/src/sil/org/syllableparser/resources/SyllableParser_en.properties
@@ -38,6 +38,7 @@ menu.analysisfont=_Analysis Font
 menu.parser=Pa_rser
 menu.tools=_Tools
 menu.syllabifywords=Syllabify _Words
+menu.tryaword=Try a Word
 menu.convertpredictedtocorrect=_Convert predicted to correct syllabification
 menu.findword=_Find Word
 menu.clearwords=_Remove all Words
@@ -106,6 +107,7 @@ label.choosebackup=Choose a backup to restore:
 label.choosenc=Choose one or more natural classes
 label.choosepredicted=Choose which predicted syllabifications to convert to correct syllabification
 label.choosesnc=Choose one or more segments and/or natural classes
+label.close=Close
 label.correctsyllabification=Correct Syllable Breaks
 label.cvnaturalclassfailure=Failure: could not parse into natural classes; did find classes '{0}' covering graphemes '{1}'.
 label.cvsegmentfailure=Failure: could not parse into segments beginning at '{0}'.
@@ -137,6 +139,7 @@ label.orthographicforms=Graphemes
 label.parserresult=Parser Result
 label.predictedsyllabification=Predicted Syllable Breaks
 label.restoreproject=Restore a Project
+label.results=Results:
 label.segment=Segment
 label.segmentinventory=Segment Inventory
 label.segmentornaturalclass=Segment or Natural Class
@@ -145,11 +148,14 @@ label.sethyphenationparameters=Set Hyphenation Parameters
 label.success=Success
 label.syllabifying=Syllabifying: 
 label.syllablepatterns=Syllable Patterns
+label.tryaword=Try a Word
+label.tryit=Try it
 label.untested=Untested
 label.word=Word
 label.wordpredictedvscorrect=Predicted vs. Correct Syllabification
 label.words=Words
 label.wordtofind=Word to find: 
+label.wordtotry=Word to try: 
 label.createnewproject=Create a new project
 label.openexistingproject=Open existing project
 label.clearwords=Remove all the words from the word list\nWe suggest you make a backup before doing this.
@@ -162,7 +168,8 @@ label.secondimplementation=Second implementation:
 label.sameimplementationsheader=Same implementations
 label.sameimplementationscontent=The two chosen implementations are the same.  Therefore, they are identical.
 label.pleasewait=Please wait...
-label.pleasewaitexplanation=This process could take a few seconds or several minutes depending on how many differences there are.
+label.pleasewaitcomparer=This process could take a few seconds or several minutes depending on how many differences there are.
+label.pleasewaittaw=This process could take a few seconds.
 
 # file loading/saving
 file.error=Error
@@ -221,3 +228,12 @@ report.words=Words
 report.samewords=Both have the same words with the same syllables.
 report.wordswhichdiffer=The following words differ between the two.
 report.syllabification=Syllabification
+# Try a Word
+report.tawtitle=Syllabification of {0}
+report.tawsegments=Parsing into segments
+report.tawnaturalclasses=Parsing segments into natural classes
+report.tawsyllablepatterns=Parsing natural classes into syllables
+report.tawdetails=Details:
+report.tawgrapheme=Grapheme:
+report.tawsegment=Segment:
+report.tawsuccess=Success!
