--- a/src/sil/org/syllableparser/resources/SyllableParser_es.properties
+++ b/src/sil/org/syllableparser/resources/SyllableParser_es.properties
@@ -38,6 +38,7 @@ menu.analysisfont=Fuente _Analítica
 menu.parser=Analizado_r
 menu.tools=_Herramientas
 menu.syllabifywords=_Silabificar Palabras
+menu.tryaword=Prueba una palabra
 menu.convertpredictedtocorrect=_Convertir la predicho para corregir silabificación
 menu.findword=_Encontrar la palabra
 menu.clearwords=_Remover todas las palabras
@@ -162,7 +163,13 @@ label.secondimplementation=Segunda implementación:
 label.sameimplementationsheader=Mismas implementaciones
 label.sameimplementationscontent=Las dos implementaciones elegidos son los mismos. Por lo tanto , son idénticos.
 label.pleasewait=Favor de esperar...
-label.pleasewaitexplanation=Este proceso puede tardar unos segundos o varios minutos dependiendo del número de diferencias que hay.
+label.pleasewaitcomparer=Este proceso puede tardar unos segundos o varios minutos dependiendo del número de diferencias que hay.
+label.pleasewaittaw=Este proceso puede tardar unos segundos.
+label.close=Cerrar
+label.results=Resultados
+label.tryaword=Prueba una palabra
+label.tryit=Intentalo
+label.wordtotry=Palabra para intentar: 
 
 # file loading/saving
 file.error=Error
@@ -221,4 +228,12 @@ report.words=Palabras
 report.samewords=Ambos tienen las mismas palabras con las mismas sílabas.
 report.wordswhichdiffer=Las siguientes palabras son diferentes entre los dos.
 report.syllabification=Silabeo
-
+# Try a Word
+report.tawtitle=Silabación de {0}
+report.tawsegments=Parsing into segments
+report.tawnaturalclasses=Análisis en segmentos
+report.tawsyllablepatterns=Análisis de las clases naturales en sílabas
+report.tawdetails=Detalles:
+report.tawgrapheme=Grafema:
+report.tawsegment=Segmento:
+report.tawsuccess=¡Éxito!
